# InterIIT-BharatForce-T1

./: .gitignore  README.md  frames_2025-10-03_16.19.42.gv  frames_2025-10-03_17.44.41.gv
install/: local_setup.sh  setup.sh
install/bcr_bot/lib/bcr_bot/: objdetection.py  remapper.py
install/bcr_bot/share/bcr_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/explore_lite/include/explore/: costmap_client.h  costmap_tools.h  explore.h  frontier_search.h
install/explore_lite/lib/explore_lite/: explore
install/explore_lite/share/explore_lite/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/multirobot_map_merge/include/map_merge/: map_merge.h  ros1_names.hpp
install/multirobot_map_merge/lib/multirobot_map_merge/: map_merge
install/multirobot_map_merge/share/multirobot_map_merge/: local_setup.bash  local_setup.dsv  local_setup.sh  (+3 more)
log/: latest_build
src/bcr-bot/: CMakeLists.txt  package.xml
src/bcr-bot/config/: mapper_params_online_async.yaml  multi_mapper.yaml  robot_1_slam.yaml
src/bcr-bot/launch/: bcr_bot_gazebo_spawn.launch.py  detectionmodel.launch.py  gazebo.launch.py  main.launch.py  mapping.launch.py  multi_robot_slam.launch.py  single_bot_mapping.launch.py
src/bcr-bot/scripts/: coneDet_using_depthTopic.py  globalposcone.py  objdetection.py
src/bcr-bot/urdf/: gazebo.xacro  multi_bcr_bot.xacro  multi_gazebo.xacro  tf_multi_bcr_bot.xacro  tf_multi_gazebo.xacro  tf_multi_macros.xacro
src/bcr-bot/worlds/: empty.sdf  small_warehouse.sdf
(+189 files in other folders)
