<?xml version="1.0"?>
<package format="2">
	<name>bcr_bot</name>
	<version>1.0.2</version>
	<description>bcr_bot</description>

	<maintainer email="gaurav@blackcoffeerobotics.com">Gaurav Gupta</maintainer>
	<maintainer email="devanshu@blackcoffeerobotics.com">Devanshu Sharma</maintainer>
	<maintainer email="angelo@blackcoffeerobotics.com">Angelo Antu</maintainer>
	<license>Apache License 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<exec_depend>ament_index_python</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>xacro</exec_depend>
	<exec_depend>tf2_ros</exec_depend>
	<exec_depend>gazebo_ros</exec_depend>
	<exec_depend>gazebo_plugins</exec_depend>
	<exec_depend>gazebo_msgs</exec_depend>
	<exec_depend>rclpy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>nav_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<buildtool_depend>ament_cmake_python</buildtool_depend>
	<exec_depend>python3-pyparsing</exec_depend>
	<exec_depend>python3-yaml</exec_depend>
	<buildtool_depend>setuptools</buildtool_depend>
	<depend>nav2_bringup</depend>
	<depend>realsense2_camera</depend>
	<depend>velodyne_pointcloud</depend>
	<depend>rtabmap_ros</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
